[gd_scene load_steps=7 format=2]

[ext_resource path="res://Script/player.gd" type="Script" id=1]
[ext_resource path="res://Scene/Controller.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
roughness = 0.0

[sub_resource type="PrismMesh" id=3]

[sub_resource type="CylinderShape" id=4]
height = 3.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
ex_heavyPath = NodePath("body/ace/ex_heavy")
ex_policePath = NodePath("body/ace/ex_police")
ex_demoPath = NodePath("body/ace/ex_demo")
ex_sniperPath = NodePath("body/ace/ex_sniper")

[node name="body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="mouth" type="MeshInstance" parent="body"]
transform = Transform( -0.0335723, 0, -0.498872, 0, 1, 0, 0.498872, 0, -0.0335723, 0, 1, -0.5 )
mesh = SubResource( 3 )
material/0 = null

[node name="ace" type="Spatial" parent="body"]

[node name="ex_heavy" type="MeshInstance" parent="body/ace"]

[node name="ex_police" type="MeshInstance" parent="body/ace"]

[node name="ex_demo" type="MeshInstance" parent="body/ace"]

[node name="ex_sniper" type="MeshInstance" parent="body/ace"]

[node name="Controller" parent="." instance=ExtResource( 2 )]
PlayerPath = NodePath("..")
MeshInstancePath = NodePath("../body")

[node name="InnerGimbal" parent="Controller" index="0"]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 4, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[editable path="Controller"]
